# omnipose

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  Figure3_S5.ipynb  Figure5_S6.ipynb  FigureS3.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  build.yml  dependencies.py  deploy.yml  install.py  omnipose_mac_environment.yml  pyproject.toml  python-package.yml  requirements.txt  setup.py  test_inference.py  test_omni.py  tox.ini
.ipynb_checkpoints/: Figure1-checkpoint.ipynb  Figure2A_4AB-checkpoint.ipynb  Figure2_3_S1-checkpoint.ipynb  Figure5_S6-checkpoint.ipynb  README-checkpoint.md
cellpose-omni/: README.md  environment.yml  setup.py
cellpose-omni-project/: MANIFEST.in  README.md  conftest.py  setup.py
cellpose_omni/: __init__.py  __main__.py  core.py  io.py  metrics.py  models.py  plot.py  resnet_style.py  resnet_torch.py  transforms.py  utils.py
docs/: .special.rst  about.rst  affinity.ipynb  affinity_ordering.md  cli.rst  command.ipynb  command.rst  conf.py  contours.ipynb  diameter-Copy1.ipynb  diameter-Copy2.ipynb  diameter-Copy3.ipynb  diameter.ipynb  diameter.rst  docutils.conf  gamma.ipynb  gui.rst  index.rst  inputs.rst  install.sh  installation.rst  links.rst  logo-Copy1.ipynb  logo.ipynb  models.rst  ncolor.ipynb  ncolor.rst  ncolor_old.rst  notebook.rst  outputs.rst  readme_full.rst  requirements.txt  self_contact.tif  settings.rst  sinebow.rst  timelapses.ipynb  train.rst  train_via_notebook.ipynb  training.rst
examples/: Omnipose_Example_1.ipynb  Omnipose_Example_2.ipynb
figures/: 3D_omniose.ipynb  3D_omnipose.ipynb  Figure_1.ipynb  Figure_2A_4AB_CP_OM_Compare.ipynb  Figure_3_S5.ipynb  Figure_5_S6_Tre1.ipynb  Figure_6_C_elegans_cyto2.ipynb  Figure_6_cyto2_example.ipynb  Figure_6_fluroescence.ipynb  Figure_6_worm_example.ipynb  Figure_S7.ipynb  Figures_3_4_S1.ipynb  Ground_truth_export_and_thumbnails.ipynb  image_cell_counting.ipynb  scale_bars.ipynb
gui/: SLIDER_STYLE_NOTES.md  __init__.py  __main__.py  pywebview_viewer.md  todo.txt
notebooks/: FigureS2.ipynb  FigureS5.ipynb  Figure_1.ipynb  Figure_2A_4AB.ipynb  Figure_2_3_S1.ipynb  Figure_3_S5.ipynb  Figure_5_S6.ipynb  Figure_S3.ipynb  Figure_S5.ipynb  image_cell_counting.ipynb
omnipose/: __init__.py  __main__.py  _version.py  cli.py  core.py  data.py  dataset.py  gpu.py  logger.py  loss.py  measure.py  misc.py  plot.py  profile.py  stacks.py  utils.py
omnipose.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plugins/: README.md  cellprofiler_plugins_mac.yml  runomnipose.py  setup.py
pyinstaller/: omni.py  omni.spec
scripts/: 3D_omnipose.ipynb  Diameter_metric.ipynb  Figure_1.ipynb  Figure_2A_4AB_CP_OM_Compare.ipynb  Figure_3_S5.ipynb  Figure_5_S6_Tre1.ipynb  Figure_6_C_elegans_cyto2.ipynb  Figure_6_cyto2_example.ipynb  Figure_6_fluroescence.ipynb  Figure_6_worm_high_res.ipynb  Figure_S2.ipynb  Figure_S3.ipynb  Figure_S5.ipynb  Figure_S7.ipynb  Figure_SX_DeLTA.ipynb  Figures_3_4_S1.ipynb  Ground_truth_export_and_thumbnails.ipynb  README.md  affinity_batch_from_training.py  affinity_batch_proto.py  affinity_batch_real.py  bench_fields_eikonal.py  coverage_cross_device.sh  export_models.ipynb  ftsN_comparison.eps  image_cell_counting.ipynb  parity_probe_omnirefactor.py  scale_bars.ipynb  show_augmented_batches.py
test_files/: Sample000306.tiff
tests/: _git_helpers.py  conftest.py  test_augment_coverage.py  test_augment_refactor.py  test_axes_refactor.py  test_bits_refactor.py  test_cache_refactor.py  test_cli.py  test_cli_formatters_refactor.py  test_cli_refactor.py  test_contour_refactor.py  test_data_eval_refactor.py  test_data_loaders_refactor.py  test_data_norm_refactor.py  test_data_train_refactor.py  test_deps.py  test_deps_refactor.py  test_diam_refactor.py  test_docs.py  test_docs_refactor.py  test_eval_pipeline_refactor.py  test_experimental_cube_refactor.py  test_fields_refactor.py  test_flows_refactor.py  test_gpu_cpu_parity.py  test_gpu_cpu_parity_refactor.py  test_gpu_refactor.py  test_imio_gif_refactor.py  test_import.py  test_imports.py  test_imports_refactor.py  test_imports_smoke_refactor.py  test_inds_refactor.py  test_inference.py  test_inference_refactor.py  test_init_refactor.py  test_io_imio_refactor.py  test_io_labels_refactor.py  test_io_paths.py  (+48 more)
(+624 files in other folders)
