[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm", "numba"]
build-backend = "setuptools.build_meta"

[project]
name = "omnirefactor"
# specify these in setup.py

dynamic = ["version",
           "description",
           "readme",
           "authors",
           "classifiers",
           "dependencies",
           "optional-dependencies"]

[project.scripts]
omnirefactor = "omnirefactor.__main__:main"

[tool.pytest.ini_options]
testpaths     = ["tests"]
norecursedirs = ["trash"]
filterwarnings = [
  "ignore::DeprecationWarning:networkit.profiling.profiling",
  "ignore:.*torch\\.jit\\.script_method.*:DeprecationWarning",
]

[tool.coverage.run]
omit = [
  "*/_version.py",
  "*/omnirefactor/gui/*",
  "*/omnirefactor/load/*",
  "*/omnirefactor/plot/*",
  "*/omnirefactor/misc/object.py",
  "*/omnirefactor/measure/pants.py",
  "*/omnirefactor/profiling/__init__.py",
]
branch = false
parallel = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if verbose:",
  "models_logger\\.",
  "omnipose_logger\\.",
  "warnings\\.warn",
]
