[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm", "numba"]
build-backend = "setuptools.build_meta"

[project]
name = "omnirefactor"
# specify these in setup.py

dynamic = ["version",
           "description",
           "readme",
           "authors",
           "classifiers",
           "dependencies",
           "optional-dependencies"]

[project.scripts]
omnirefactor = "omnirefactor.__main__:main"
omnirefactor-gui = "omnirefactor.gui:main"
omnirefactor-loss-server = "omnirefactor.cli.loss_server:main"
omnirefactor-sweep-report = "omnirefactor.cli.sweep_report:main"

[project.entry-points."ocdkit.plugins"]
omnipose = "omnirefactor.gui:plugin"

[tool.pytest.ini_options]
testpaths     = ["tests"]
norecursedirs = ["trash"]
markers = [
  "slow: end-to-end tests that run real inference (deselect with '-m \"not slow\"')",
]
filterwarnings = [
  "ignore::DeprecationWarning:networkit.profiling.profiling",
  "ignore:.*torch\\.jit\\.script_method.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["omnirefactor"]
omit = [
  "*/_version.py",
  "*/omnirefactor/load/*",
  "*/omnirefactor/experimental/*",
  "*/omnirefactor/cli/loss_server.py",
  "*/omnirefactor/cli/tensorboard_viewer.py",
]

[tool.coverage.paths]
source = [
  "src/omnirefactor",
  "/Volumes/DataDrive/omnipose/omnirefactor/src/omnirefactor",
  "/home/kcutler/DataDrive/omnipose/omnirefactor/src/omnirefactor",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if verbose:",
  "models_logger\\.",
  "omnipose_logger\\.",
  "warnings\\.warn",
]
