[build-system]
requires = ["setuptools>=61", "wheel", "numba"]
build-backend = "setuptools.build_meta"

[project]
name = "omnipose"
# specify these in setup.py

dynamic = ["version",
           "description",
           "readme",
           "authors",
           "classifiers",
           "dependencies",
           "optional-dependencies"]

[project.scripts]
omnipose = "omnipose.__main__:main"
omnipose-gui = "omnipose.gui:main"
omnipose-loss-server = "omnipose.cli.loss_server:main"
omnipose-sweep-report = "omnipose.cli.sweep_report:main"

[project.entry-points."ocdkit.plugins"]
omnipose = "omnipose.gui:plugin"

[tool.pytest.ini_options]
testpaths     = ["tests"]
norecursedirs = ["trash"]
markers = [
  "slow: end-to-end tests that run real inference (deselect with '-m \"not slow\"')",
]
filterwarnings = [
  "ignore::DeprecationWarning:networkit.profiling.profiling",
  "ignore:.*torch\\.jit\\.script_method.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["omnipose"]
omit = [
  "*/_version.py",
  "*/omnipose/experimental/*",
  "*/omnipose/cli/loss_server.py",
  "*/omnipose/cli/tensorboard_viewer.py",
]

[tool.coverage.paths]
source = [
  "src/omnipose",
  "/Volumes/DataDrive/omnipose/src/omnipose",
  "/home/kcutler/DataDrive/omnipose/src/omnipose",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if verbose:",
  "models_logger\\.",
  "omnipose_logger\\.",
  "warnings\\.warn",
]
